--- a/08_ImageFunctions/ZoomThumbInterlocking/Views/MainWindow.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking/Views/MainWindow.xaml
@@ -12,27 +12,22 @@
         prism:ViewModelLocator.AutoWireViewModel="True"
         mc:Ignorable="d"
         Title="ZoomThumbInterlocking"
-        Height="400" Width="600">
+        Height="400" Width="650">
 
     <Grid AllowDrop="True" >
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="4" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-        <i:Interaction.Triggers>
-            <i:EventTrigger EventName="Drop">
-                <r:EventToReactiveProperty ReactiveProperty="{Binding DropEvent, Mode=OneTime}">
-                    <vmec:DropEventToUriConverter/>
-                </r:EventToReactiveProperty>
-            </i:EventTrigger>
-        </i:Interaction.Triggers>
+        <ContentControl Grid.Column="0"
+                        prism:RegionManager.RegionName="ImageScrollViewer0" />
 
-        <Button Margin="0,10,0,0"
-                Content="LoadImage"
-                Command="{Binding LoadImageCommand, Mode=OneTime}" />
+        <Grid Grid.Column="1" Background="SkyBlue" />
 
-        <v:ImageScrollViewer Grid.Row="1" />
+        <ContentControl Grid.Column="2"
+                        prism:RegionManager.RegionName="ImageScrollViewer1" />
 
     </Grid>
 
