--- a/08_ImageFunctions/ZoomThumbInterlocking/Views/ImageScrollViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking/Views/ImageScrollViewer.xaml
@@ -43,7 +43,8 @@
                       x:Name="MainScrollViewer"
                       Style="{StaticResource ScrollViewerImageStyleKey}"
                       v:ImageScrollViewer.ZoomPayload="{Binding ImageZoomPayload.Value, Mode=TwoWay}"
-                      v:ImageScrollViewer.ScrollOffsetCenter="{Binding ImageScrollOffsetCenter.Value, Mode=TwoWay}" >
+                      v:ImageScrollViewer.ScrollOffsetCenterRatio="{Binding ImageScrollOffsetCenterRatio.Value, Mode=TwoWay}"
+                      v:ImageScrollViewer.IsImageViewerInterlock="{Binding IsImageViewerInterlock.Value, Mode=OneWay}" >
 
             <Image x:Name="MainImage"
                    Source="{Binding ImageSource.Value, Mode=OneWay, NotifyOnTargetUpdated=True}" />
