--- a/08_ImageFunctions/ZoomThumbInterlocking/Views/ImageScrollViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking/Views/ImageScrollViewer.xaml
@@ -28,6 +28,11 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
+        <i:Interaction.Behaviors>
+            <!-- MouseWheel+ShiftでScrollViewerを左右に移動 -->
+            <v:MouseHorizontalShiftBehavior />
+        </i:Interaction.Behaviors>
+
         <Button Grid.Row="0"
                 Margin="0,10,0,0"
                 Content="LoadImage"
@@ -47,7 +52,12 @@
                              v:ImageScrollViewer.IsImageViewerInterlock="{Binding IsImageViewerInterlock.Value, Mode=OneWay}" >
 
             <Image x:Name="MainImage"
-                   Source="{Binding ImageSource.Value, Mode=OneWay, NotifyOnTargetUpdated=True}" />
+                   Source="{Binding ImageSource.Value, Mode=OneWay, NotifyOnTargetUpdated=True}" >
+                <i:Interaction.Behaviors>
+                    <!-- 画像ズーム時のスケーリング更新 -->
+                    <v:ImageBitmapScalingBehavior />
+                </i:Interaction.Behaviors>
+            </Image>
 
         </v:ScrollImageViewer>
 
@@ -56,7 +66,7 @@
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Margin="5,5,0,0"
-                Visibility="Collapsed"
+                Visibility="{Binding VisibilityReducedImage, ElementName=MainScrollViewer, Mode=OneWay}"
                 Width="{Binding ElementName=Thumbnail, Path=ActualWidth}"
                 Height="{Binding ElementName=Thumbnail, Path=ActualHeight}" >
 
