--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/MainWindow.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/MainWindow.xaml
@@ -21,10 +21,18 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Margin="10,5,0,0" Orientation="Horizontal">
-            <CheckBox IsChecked="{Binding IsImageViewerInterlock.Value, Mode=TwoWay}"
+            <CheckBox Margin="0,0,10,0"
+                      IsChecked="{Binding IsImageViewerInterlock.Value, Mode=TwoWay}"
                       Content="各画像表示の連動フラグ" />
-            <CheckBox IsChecked="{Binding CanVisibleReducedImage.Value, Mode=TwoWay}"
+            
+            <CheckBox Margin="0,0,10,0"
+                      IsChecked="{Binding CanVisibleReducedImage.Value, Mode=TwoWay}"
                       Content="縮小画像の表示フラグ" />
+            
+            <CheckBox Margin="0,0,10,0"
+                      IsChecked="{Binding IsVisibleImageOverlapSamplingFrame.Value, Mode=TwoWay}"
+                      Content="サンプリング枠の表示フラグ" />
+            
         </StackPanel>
 
         <Grid Grid.Row="1" >
