--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ScrollImageViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ScrollImageViewer.xaml
@@ -6,6 +6,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:vc="clr-namespace:ZoomThumb.Views.Controls"
              xmlns:vb="clr-namespace:ZoomThumb.Views.Behaviors"
+             x:Name="root"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
@@ -25,22 +26,14 @@
             <vb:MouseHorizontalShiftBehavior />
         </i:Interaction.Behaviors>
 
-        <Grid>
-            <Image x:Name="MainImage"
-                   Source="{Binding ImageSource.Value, Mode=OneWay, NotifyOnTargetUpdated=True}" >
-                <i:Interaction.Behaviors>
-                    <!-- 画像ズーム時のスケーリング更新 -->
-                    <vb:ImageBitmapScalingBehavior />
-                </i:Interaction.Behaviors>
-            </Image>
-            
-            <!--
-            <vc:ImageOverlapSamplingFrame
-                ImageViewActualSize="{Binding ImageViewActualSize, ElementName=root, Mode=OneWay}"
-                />
-            -->
-            
-        </Grid>
+        <Image x:Name="MainImage"
+               Source="{Binding ImageSource, ElementName=root, Mode=OneWay, NotifyOnTargetUpdated=True}" >
+            <i:Interaction.Behaviors>
+                <!-- 画像ズーム時のスケーリング更新 -->
+                <vb:ImageBitmapScalingBehavior />
+            </i:Interaction.Behaviors>
+        </Image>
+           
     </ScrollViewer>
 
 </UserControl>
