--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ImageOverlapSamplingFrame.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ImageOverlapSamplingFrame.xaml
@@ -10,9 +10,12 @@
              d:DesignHeight="50" d:DesignWidth="50">
 
     <Canvas x:Name="GroundCanvas"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center" >
+        <!--
             HorizontalAlignment="Left"
             VerticalAlignment="Top" >
-
+        -->
         <Border MinWidth="5"
                 MinHeight="5"
                 BorderBrush="{Binding FrameBorderBrush, ElementName=root, Mode=OneWay}"
