--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ScrollImageViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ScrollImageViewer.xaml
@@ -39,6 +39,7 @@
 
             <vc:ImageOverlapSamplingFrame FrameRectRatio="{Binding ImageOverlapSamplingFrameRectRatio, ElementName=root, Mode=OneWayToSource}"
                                           GroundPanelSize="{Binding ImageControlSize, ElementName=root, Mode=OneWay}"
+                                          IsFrameInterlock="{Binding IsViewerInterlock, ElementName=root, Mode=OneWay}"
                                           FrameBorderBrush="Cyan" >
                 <vc:ImageOverlapSamplingFrame.Style>
                     <Style TargetType="vc:ImageOverlapSamplingFrame">
