--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ImageOverlapSamplingFrame.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ImageOverlapSamplingFrame.xaml
@@ -27,7 +27,7 @@
 
         <Border MinWidth="5"
                 MinHeight="5"
-                BorderBrush="{Binding FrameBorderBrush, ElementName=root, Mode=OneWay}"
+                BorderBrush="{Binding BorderBrush, ElementName=root, Mode=OneWay}"
                 Background="Transparent"
                 BorderThickness="2" >
 
