--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ScrollImageViewer.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/Controls/ScrollImageViewer.xaml
@@ -38,12 +38,12 @@
             </Image>
 
             <!-- 画像上のサンプリング枠 -->
-            <vc:ImageOverlapSamplingFrame Width="{Binding ActualWidth, ElementName=MainImage, Mode=OneWay}"
+            <vc:ImageOverlapSamplingFrame BorderBrush="Cyan"
+                                          Width="{Binding ActualWidth, ElementName=MainImage, Mode=OneWay}"
                                           Height="{Binding ActualHeight, ElementName=MainImage, Mode=OneWay}"
                                           GroundPanelTopLeft="{Binding ContentViewRect.TopLeft, ElementName=root, Mode=OneWay}"
                                           IsFrameInterlock="{Binding IsViewerInterlock, ElementName=root, Mode=OneWay}"
-                                          FrameRectRatio="{Binding ImageOverlapSamplingFrameRectRatio, ElementName=root, Mode=OneWayToSource}"
-                                          FrameBorderBrush="Cyan" >
+                                          FrameRectRatio="{Binding ImageOverlapSamplingFrameRectRatio, ElementName=root, Mode=OneWayToSource}" >
                 <vc:ImageOverlapSamplingFrame.Style>
                     <Style TargetType="vc:ImageOverlapSamplingFrame">
                         <Setter Property="Visibility">
