--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/ImageScrollControl.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/ImageScrollControl.xaml
@@ -54,12 +54,12 @@
 
         <!-- ScrollViewer上のサンプリング枠
         <vc:ImageOverlapSamplingFrame Grid.Row="1"
+                                      BorderBrush="Magenta"
                                       Width="{Binding ContentViewRect.Width, ElementName=MainScrollImageViewer, Mode=OneWay}"
                                       Height="{Binding ContentViewRect.Height, ElementName=MainScrollImageViewer, Mode=OneWay}"
                                       GroundPanelTopLeft="{Binding ContentViewRect.TopLeft, ElementName=MainScrollImageViewer, Mode=OneWay}"
                                       IsFrameInterlock="{Binding IsImageViewerInterlock.Value, Mode=OneWay}"
-                                      FrameRectRatio="{Binding ImageOverlapSamplingFrameRectRatio, ElementName=MainScrollImageViewer, Mode=OneWayToSource}"
-                                      FrameBorderBrush="Magenta" >
+                                      FrameRectRatio="{Binding ImageOverlapSamplingFrameRectRatio, ElementName=MainScrollImageViewer, Mode=OneWayToSource}" >
             <vc:ImageOverlapSamplingFrame.Style>
                 <Style TargetType="vc:ImageOverlapSamplingFrame">
                     <Setter Property="Visibility">
