--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/ImageScrollControl.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/ImageScrollControl.xaml
@@ -38,7 +38,7 @@
         <StackPanel Grid.Row="2" Orientation="Horizontal">
             <Button Height="30" Width="100" Content="ZoomAll" Command="{Binding ZoomAllCommand, Mode=OneTime}" />
             <Button Height="30" Width="100" Content="ZoomX1" Command="{Binding ZoomX1Command, Mode=OneTime}" />
-            <Button Height="30" Width="100" Content="OffsetCenter" Command="{Binding OffsetCenterCommand, Mode=OneTime}" />
+            <Button Height="30" Width="100" Content="ZoomOffsetCenter" Command="{Binding OffsetCenterCommand, Mode=OneTime}" />
         </StackPanel>
 
         <vc:ScrollImageViewer Grid.Row="1"
@@ -48,11 +48,10 @@
                               ZoomPayload="{Binding ImageZoomPayload.Value, Mode=TwoWay}"
                               ScrollOffsetCenterRatio="{Binding ImageScrollOffsetCenterRatio.Value, Mode=TwoWay}"
                               ImageCursorPoint="{Binding PointTest.Value, Mode=OneWayToSource}"
-                              IsVisibleImageSamplingFrame="{Binding IsVisibleImageSamplingFrame.Value, Mode=OneWay}"
-                              ImageOverlapSamplingFrameRect="{Binding SamplingFrameRect.Value, Mode=OneWayToSource}"
-                              />
-
-        <!-- ScrollViewer上のサンプリング枠
+                              IsVisibleImageSamplingFrame="{Binding IsSamplingFrameOnImage.Value, Mode=OneWay}"
+                              ImageOverlapSamplingFrameRect="{Binding SamplingFrameRect.Value, Mode=OneWayToSource}" />
+        
+        <!-- ScrollViewer上のサンプリング枠 -->
         <vc:ImageOverlapSamplingFrame Grid.Row="1"
                                       BorderBrush="Magenta"
                                       Width="{Binding ContentViewRect.Width, ElementName=MainScrollImageViewer, Mode=OneWay}"
@@ -66,7 +65,7 @@
                         <Setter.Value>
                             <MultiBinding Converter="{StaticResource BooleansToVisibilityConverter}">
                                 <MultiBinding.Bindings>
-                                    <Binding Path="IsVisibleImageSamplingFrame.Value" Mode="OneWay" />
+                                    <Binding Path="IsSamplingFrameOnScrollContent.Value" Mode="OneWay" />
                                     <Binding Path="IsLoadImage" ElementName="MainScrollImageViewer" Mode="OneWay" />
                                 </MultiBinding.Bindings>
                             </MultiBinding>
@@ -75,7 +74,6 @@
                 </Style>
             </vc:ImageOverlapSamplingFrame.Style>
         </vc:ImageOverlapSamplingFrame>
-         -->
 
         <vc:ReducedImageCanvas Grid.Row="1"
                                ScrollOffsetVectorRatioRequest="{Binding ScrollOffsetVectorRatio, ElementName=MainScrollImageViewer, Mode=OneWayToSource}" >
