--- a/08_ImageFunctions/ZoomThumbInterlocking2/Views/MainWindow.xaml
+++ b/08_ImageFunctions/ZoomThumbInterlocking2/Views/MainWindow.xaml
@@ -17,25 +17,31 @@
     <Grid AllowDrop="True" >
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Margin="10,5,0,0" Orientation="Horizontal">
             <CheckBox Margin="0,0,10,0"
                       IsChecked="{Binding IsImageViewerInterlock.Value, Mode=TwoWay}"
-                      Content="各画像表示の連動フラグ" />
-            
+                      Content="各画像表示(枠)の連動フラグ" />
+
             <CheckBox Margin="0,0,10,0"
                       IsChecked="{Binding CanVisibleReducedImage.Value, Mode=TwoWay}"
                       Content="縮小画像の表示フラグ" />
-            
+        </StackPanel>
+
+        <StackPanel Grid.Row="1" Margin="10,5,0,0" Orientation="Horizontal">
             <CheckBox Margin="0,0,10,0"
                       IsChecked="{Binding IsVisibleImageOverlapSamplingFrame.Value, Mode=TwoWay}"
                       Content="サンプリング枠の表示フラグ" />
-            
+
+            <CheckBox Margin="0,0,10,0"
+                      IsChecked="{Binding IsSamplingFrameOnImage.Value, Mode=TwoWay}"
+                      Content="枠レイヤー：画像上" />
         </StackPanel>
 
-        <Grid Grid.Row="1" >
+        <Grid Grid.Row="2" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*" />
                 <ColumnDefinition Width="Auto" />
